# ablate

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  README.rst  dep_setup.py  install_msise00.sh  mkdocs.yml  pyproject.toml  requirements  requirements.txt  setup.cfg  setup.py
ablate/: __init__.py  base_models.py  data_handlers.py  functions.py  models.py
ablate/atmosphere/: base_model.py  models.py
ablate/differential_equation/: __init__.py  ode.py
docs/: index.md  requirements
docs/assets/: ablate_favicon.xcf
docs/examples/: ablation_sweep.py  alpha_beta.py  alpha_beta_trajectory.py  alpha_beta_velocity_partial_data.py  animate_meteor_plasma.py  calculate_gamma_lambda.py  compare_alpha_beta_num_ablation.py  compare_sputtering.py  compute_plasma_source_density.py  drag_versus_size.py  example_ablation_model_run.py  example_alpha_beta_integration.py  example_fireball_ablation.py  example_mutationpp_usage.py  example_shock_calculation.py  example_simple_meteor_models.py  fit_alpha_beta.py  fit_ballistic.py  fit_ballistic_coeff.py  getting_started.py  heat_coef_versus_size.py  height_rescaling.py  index.md  kero_figure1.py  knudsen_number.py  large_beta.py  meteor_plasma_distribution.py  plot_msise00.py  plot_pymsis.py
docs/examples/data/: 20140104-025436.json
docs/source/: ablation_models.rst  api.rst  atmospheric_models.rst  conf.py  examples.rst  functions.rst  index.rst  installing.rst
docs/source/_templates/: layout.html
docs/source/base_material/: ablate.xcf
docs/source/templates/autosummary/: property.rst
examples/: README.txt  alpha_beta.py  alpha_beta_covariance.py  alpha_beta_velocity.py  calculate_gamma_lambda.py  compare_sputtering.py  drag_versus_size.py  example_ablation_model_run.py  example_run_Longlune.py  fit_ablation_model_radar_data.py  new_ablation_model.ipynb  new_ablation_models.py  plot_msise00.py
scripts/: example_atmos.py  example_parameters.py  generate_api_docs.py  generate_examples_docs.py  test_ablation.py  test_gamma_lambda.py  test_sputtering.py
src/ablate/: __init__.py  ablation_model.py  base_models.py  coordinates.py  core.py  material.py  models.py  ode.py  version.py
src/ablate/ablation/: alpha_beta.py  dynamics.py  luminosity.py  massloss.py  sputtering.py  temperature.py
src/ablate/atmosphere/: __init__.py  atm_msise00.py  atm_pymsis.py  atmosphere.py  base_model.py  models.py  nrl_msise.py  util.py
src/ablate/functions/: __init__.py  ablation.py  coordinate.py  dynamics.py  material.py  misc.py  sputtering.py
src/ablate/models/: __init__.py  dimant_oppenheim_2017.py  kero_szasz_2008.py  longlune_2024.py
src/ablate/physics/: __init__.py  alpha_beta.py  ballistic.py  luminosity.py  sputtering.py  thermal_ablation.py
src/metablate/: __init__.py  ablation_model.py  array_types.py  coordinates.py  dimant_oppenheim_plottest.py  material.py  ode.py  types.py  version.py
src/metablate/atmosphere/: atm_msise00.py  atm_pymsis.py  atmosphere.py
src/metablate/models/: __init__.py  alpha_beta_2026.py  dimant_oppenheim_2017.py  kero_szasz_2008.py  model.py  simple.py  stulov_mirskii_vislyi_1995.py
src/metablate/physics/: __init__.py  aerodynamics.py  alpha_beta.py  ballistic.py  sputtering.py  thermal_ablation.py
tests/: conftest.py  test_ablate.py  test_atmosphere.py  test_differential_equation.py  test_import.py  test_ode_solver.py
