[metadata]
name = ablate
version = 0.1.0
description = A collection of meteor ablation models
long_description = file: README.md, LICENSE
author = Daniel Kastinen, Johan Kero
author_email = daniel.kastinen@irf.se, kero@irf.se
license = GPL-3.0-or-later
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/ablate
classifiers = 
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Atmospheric Science
    Operating System :: Unix
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)


[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.7
install_requires =
    tqdm >= 4.62.3
    scipy >= 1.7.1, < 2
    numpy >= 1.21.3, < 2
    matplotlib >= 3.4.3, < 4
    xarray >= 0.19.0, < 2


[options.packages.find]
where = src


[options.extras_require]
msise = 
    msise00 @ git+git://github.com/space-physics/msise00.git@main
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    sphinx-gallery >= 0.3.1
    sphinx-rtd-theme >= 0.4.3

[flake8]
ignore = D203
exclude = .git,__pycache__,docs/source/conf.py,build,dist,tests,examples